# quantis-qrng-openssl-integration

./: .clang-format  .gitignore  LICENSE.txt  README.md
.github/workflows/: ci.yml
config/: openssl.cnf
qrng_openssl_provider/: CMakeLists.txt  quantis_qrng_provider.c  quantis_qrng_provider.h  quantis_qrng_provider_rand.c  quantis_qrng_provider_rand.h
qrng_openssl_provider/tests/: provider_integration_test.c
